[gd_scene load_steps=14 format=2]

[ext_resource path="res://wall/wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemy/enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/game.gd" type="Script" id=3]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://assets/unicolor.gdshader" type="Shader" id=6]
[ext_resource path="res://assets/music/TeaTimeAll.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sound-effects/TeaTimeAllWin1_1.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sound-effects/TeaTimeAllWin2.ogg" type="AudioStream" id=9]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 6 )
shader_param/color = Color( 0, 0.188235, 0.286275, 1 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:pitch_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "slow-down"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:pitch_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "speed-up"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:pitch_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 1.0 ]
}

[node name="Game" type="Node"]
script = ExtResource( 3 )
audio_streams = [ ExtResource( 8 ), ExtResource( 9 ) ]
host_time = 0.3

[node name="Background" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 30, 30 )
texture = ExtResource( 5 )

[node name="Walls" type="Node2D" parent="."]

[node name="WallUp" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 0, -500 )

[node name="WallDown" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 0, 500 )

[node name="WallLeft" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( -800, 0 )
rotation = 1.5708

[node name="WallRight" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 800, 0 )
rotation = 1.5708

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource( 2 )]
activated = true
is_on = true

[node name="Enemy2" parent="Enemies" instance=ExtResource( 2 )]
position = Vector2( 300, 300 )

[node name="Enemy3" parent="Enemies" instance=ExtResource( 2 )]
position = Vector2( 300, -300 )

[node name="Enemy4" parent="Enemies" instance=ExtResource( 2 )]
position = Vector2( -300, -300 )

[node name="Enemy5" parent="Enemies" instance=ExtResource( 2 )]
position = Vector2( -300, 300 )

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AudioStreamPlayer")
anims/RESET = SubResource( 3 )
anims/slow-down = SubResource( 4 )
anims/speed-up = SubResource( 5 )

[node name="AudioStreamPlayerCapture" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="done" from="." to="." method="_on_Game_done"]
[connection signal="gameover" from="." to="." method="_on_Game_gameover"]
